--- a/笔记/文件操作.md
+++ b/笔记/文件操作.md
@@ -518,7 +518,6 @@ func Exists(path string) bool {
 	return true
 }
 
-
 // 判断所给路径文件/文件夹是否存在3  直接用os.IsNotExist(err)
 func Exists(path string) bool {
 	_, err := os.Stat(path)    //os.Stat获取文件信息
@@ -528,6 +527,133 @@ func Exists(path string) bool {
 	return true
 }
 ```
+
+
+
+# nginx配置文件修改
+
+需求:  nginx stream模块下制定listen ip:port; 下增加allow 网段
+
+​		**bug**: 添加过的会多次添加，适合特定应用场景
+
+main.go
+
+```go
+package main
+
+import (
+	"fmt"
+)
+
+var (
+	// nginx配置文件路劲
+	fileName = "/etc/nginx/conf.d/test.conf"
+	// 构建配置文件
+	lines string
+	// 要匹配的listen ip+端口
+	//ports = map[string]bool{"listen 10.0.0.41:9002;":true}
+	ports = []string{"10.0.0.41:9002"}
+)
+
+const (
+	// 允许ip段
+	Intra = "172.16.1.0/24"
+)
+
+func main() {
+	// 判断文件
+	res := Exists(fileName)
+	if !res{
+		return
+	}
+
+	// 读文件
+	lines = ReadFile(fileName)
+	fmt.Println(lines)
+
+	// 覆盖文件
+	WriteFile(fileName,lines)
+
+}
+```
+
+common.go
+
+```go
+package main
+
+import (
+	"bufio"
+	"fmt"
+	"io"
+	"os"
+	"strings"
+)
+
+// Exists 判断所给路径文件是否存在  直接用os.IsNotExist(err)
+func Exists(filename string) bool {
+	_, err := os.Stat(filename)    //os.Stat获取文件信息
+	if os.IsNotExist(err) {
+		return false
+	}
+	return true
+}
+
+// ReadFile 读文件内容文件
+func ReadFile(filename string) (lines string) {
+	if f,err := os.Open(filename); err == nil{
+		defer f.Close()
+		reader := bufio.NewReader(f) // *bufio.Reader
+		for {
+			line ,err := reader.ReadString('\n')
+			if err == io.EOF{
+				if len(line) !=0 {
+					//fmt.Println(line) // 最后一行
+					line = Update(line,Intra,ports)
+					lines = lines+line
+				}
+				fmt.Println("读完了")
+				break
+			}
+			if err != nil {
+				fmt.Println("读取失败",err)
+				return
+			}
+			//fmt.Print(line) // 输出读到的每行
+			line = Update(line,Intra,ports)
+			lines = lines+line
+		}
+	}
+	return lines
+}
+
+// Update 重构文件修改内容
+func Update(line,Intra string,ports []string)(Line string){
+	for _,port := range ports{
+		if strings.HasPrefix(strings.TrimSpace(line),"listen") && strings.Contains(line,port){
+			line = line+strings.Repeat(" ",8)+"allow "+Intra+";\n"
+		}
+	}
+	return line
+}
+
+// WriteFile 覆盖文件
+func WriteFile(filename,lines string){
+	f,err := os.OpenFile(filename,os.O_CREATE|os.O_WRONLY, 0644)
+	defer f.Close()
+	if err != nil{
+		fmt.Println(err)
+		return
+	}
+	writer := bufio.NewWriter(f)
+	n, err := writer.WriteString(lines)
+	fmt.Println(n)
+	_ = writer.Flush()
+}
+
+```
+
+
 
 
 
@@ -686,4 +812,4 @@ func Exists(path string) bool {
   }
   ```
 
-  
+
