--- a/笔记/网络编程.md
+++ b/笔记/网络编程.md
@@ -841,6 +841,28 @@ content-Type=multipart/form-data处理方式：
 
 P219《go语言开发实战》
 
+## url编码
+
+```go
+package main
+
+import(
+    "fmt"
+    "net/url"
+)
+
+func main()  {
+    var urlStr string = "傻了吧:%:%@163& .html.html"
+    escapeUrl := url.QueryEscape(urlStr)
+    fmt.Println("编码:",escapeUrl)
+
+    enEscapeUrl, _ := url.QueryUnescape(escapeUrl)
+    fmt.Println("解码:",enEscapeUrl)
+}
+```
+
+
+
 ## GO模板
 
 P221《go语言开发实战》
