--- a/笔记/总结1.md
+++ b/笔记/总结1.md
@@ -221,6 +221,30 @@ fmt.Printf("%v\n",strings.Compare("abc","abc"))  // 0
 fmt.Println("abc"=="acb")  // false
 ```
 
+# 字符串遇到问题
+
+切片类型传参到函数为"a","b","c"
+
+```go
+package main
+
+import "fmt"
+
+// 函数接收，value传入会自动变成[]切片
+func test(v string,value ...string)  {
+	for k,v1 := range value{
+		fmt.Println(k)
+		fmt.Println(v1)
+	}
+}
+
+func main() {
+	s := []string{"343742221@qq.com","834148284@qq.com"}
+    // 传入参数是直接... 如果切片和...之间有空格，会传入空字符串""
+	test("a",s...)
+}
+```
+
 
 
 # 变量
