--- a/笔记/反射.md
+++ b/笔记/反射.md
@@ -447,3 +447,102 @@ func main() {
 
 
 
+# 反射应用
+
+## 初始化日志库转换类型
+
+**这里只做测试，定义一个Loglumberjack字典为int不需要变更类型**
+
+```go
+package main
+
+import (
+	"errors"
+	"fmt"
+	"reflect"
+)
+/*
+定义一个Loglumberjack字典，值为借口类型
+1.拿到ref反射OBJ
+2.判断是否有值
+	有:执行3
+	无:定义制定类型并赋值 return
+3.判断定义类型，并转换为相应类型
+*/
+func main() {
+	var Loglumberjack map[string]interface{}
+	Loglumberjack = map[string]interface{}{
+
+		"MaxBackups": 30,      // 文件最多保存多少天
+		"MaxAge": 30,          // 日志文件最多保存多少个备份
+		"Compress": true,      // 是否压缩
+	}
+
+	ref := Loglumberjack["MaxBackups"]
+	//res := Loglumberjack["MaxSize"]
+	v := reflect.ValueOf(ref)
+	if !v.IsValid(){
+		var MaxSize uint8
+		MaxSize = 8
+		Loglumberjack["MaxSize"]=MaxSize
+		fmt.Printf("%T",Loglumberjack["MaxSize"])  // uint8
+		return
+	}
+	k := v.Kind()
+	
+	switch k {
+	case reflect.Int:
+		fmt.Println(uint8(v.Int()))
+	default:
+		panic(errors.New("输入类型错误"))
+	}
+	fmt.Printf("%T,%v,%v\n",k,v.IsValid(),v)  // int,true,30
+	fmt.Println(Loglumberjack)
+}
+```
+
+
+
+```go
+// IntReflect 处理反射int32类型信息
+func IntReflect(def uint32,input interface{})(res uint32,err error){
+	v := reflect.ValueOf(input)
+	// 判断传入参数是否为空
+	if !v.IsValid(){
+		res = def
+		return res,nil
+	} else { // 非空
+		k := v.Kind()
+
+		switch k {
+		case reflect.Int:
+			res = uint32(v.Int())
+			return res,nil
+		default:
+			log.Fatal(input,", 输入类型错误")
+		}
+		return 0,nil
+	}
+}
+
+// BoolReflect 处理bool反射值
+func BoolReflect(def bool,input interface{})(res bool,err error){
+	v := reflect.ValueOf(input)
+	// 判断传入参数是否为空
+	if !v.IsValid(){
+		res = def
+		return res,nil
+	} else { // 非空
+		k := v.Kind()
+
+		switch k {
+		case reflect.Bool:
+			return res,nil
+		default:
+			log.Fatal(input,", 输入类型错误")
+		}
+		return false,nil
+	}
+}
+```
+
