--- a/笔记/接口.md
+++ b/笔记/接口.md
@@ -472,6 +472,49 @@ func main() {
 
 
 
+```go
+// IntReflect 处理反射int32类型信息
+func IntReflect(def uint32,input interface{})(res uint32,err error){
+	v := reflect.ValueOf(input)
+	// 判断传入参数是否为空
+	if !v.IsValid(){
+		res = def
+		return res,nil
+	} else { // 非空
+		k := v.Kind()
+
+		switch k {
+		case reflect.Int:
+			res = uint32(v.Int())
+			return res,nil
+		default:
+			log.Fatal(input,", 输入类型错误")
+		}
+		return 0,nil
+	}
+}
+
+// BoolReflect 处理bool反射值
+func BoolReflect(def bool,input interface{})(res bool,err error){
+	v := reflect.ValueOf(input)
+	// 判断传入参数是否为空
+	if !v.IsValid(){
+		res = def
+		return res,nil
+	} else { // 非空
+		k := v.Kind()
+
+		switch k {
+		case reflect.Bool:
+			return res,nil
+		default:
+			log.Fatal(input,", 输入类型错误")
+		}
+		return false,nil
+	}
+}
+```
+
 
 
 
