--- a/笔记/密码算法.md
+++ b/笔记/密码算法.md
@@ -237,10 +237,10 @@ func main() {
 返回：
 
 ```ini
-加密字符串： password@123
-加密密钥： sfd*&sD2
-加密密文： e8b904ddf2f06696cc4a6af962d08995
-解密字符串： password@123
+加密字符串: password@123
+加密密钥: sfd*&sD2
+加密密文: e8b904ddf2f06696cc4a6af962d08995
+解密字符串: password@123
 ```
 
 
@@ -249,7 +249,87 @@ func main() {
 
 
 
+```go
+package main
 
+import (
+	"bytes"
+	"crypto/cipher"
+	"crypto/des"
+	"fmt"
+)
+// TripleDesEncrypt 3DES 加密 返回十六进制数组
+func TripleDesEncrypt(originalBytes,key []byte)([]byte,error)  {
+	block,err := des.NewTripleDESCipher(key)
+	if err != nil {
+		return nil, err
+	}
+	originalBytes = PKCS5Padding(originalBytes,block.BlockSize())
+	blockMode := cipher.NewCBCEncrypter(block,key[:8])
+	cipherArr := make([]byte,len(originalBytes))
+	blockMode.CryptBlocks(cipherArr,originalBytes)
+	return cipherArr,nil
+}
+
+// 3DES 解密,返回切片 string()直接转换
+func TripleDesDecrypt(cipherBytes,key []byte) ([]byte,error) {
+	block,err := des.NewTripleDESCipher(key)
+	if err != nil {
+		return nil, err
+	}
+	blockMode := cipher.NewCBCDecrypter(block,key[:8])
+	originalArr := make([]byte,len(cipherBytes))
+	blockMode.CryptBlocks(originalArr,cipherBytes)
+	originalArr = PKCS5UnPadding(originalArr)
+	return originalArr,nil
+}
+
+
+// PKCS5Padding 尾部填充，使用PKCS5填充
+func PKCS5Padding(ciphertext []byte,blockSize int)[]byte{
+	padding := blockSize - len(ciphertext)%blockSize
+	padtext := bytes.Repeat([]byte{byte(padding)},padding)
+	return append(ciphertext,padtext...)
+}
+
+func PKCS5UnPadding(origData []byte)[]byte{
+	length := len(origData)
+	// 去掉最后一个字节 unpadding次
+	unpadding := int(origData[length-1])
+	return origData[:(length - unpadding)]
+}
+
+func main() {
+	var (
+		// 密钥 长度24位
+		randKey = "x1z74nLdFVhIj9iEZpXGqKML"
+		// 要加密的字符串
+		srcStr = "111111"
+	)
+	// 转换为[]byte切片
+	key := []byte(randKey)
+	str := []byte(srcStr)
+
+	fmt.Println("加密字符串：",srcStr)
+	fmt.Println("加密密钥：",randKey)
+	//////////////////////加密/////////////////////
+	res ,_ := TripleDesEncrypt(str,key)
+	fmt.Printf("加密密文：%x\n",res)  // 55ef2e9ae2b975be
+
+	//////////////////////解密/////////////////////
+	decStr,_ := TripleDesDecrypt(res,key)
+	fmt.Printf("解密后字符串：%s",string(decStr))
+}
+```
+
+返回：
+
+```ini
+加密字符串: 111111
+加密密钥: x1z74nLdFVhIj9iEZpXGqKML
+加密密文: 55ef2e9ae2b975be
+解密后字符串:111111
+```
 
 
 
@@ -257,20 +337,322 @@ func main() {
 
 
 
+```go
+package main
+
+import (
+	"bytes"
+	"crypto/aes"
+	"crypto/cipher"
+	"fmt"
+)
+// AesEncrypt AES 加密，返回十六进制字节数组
+func AesEncrypt(originalBytes,key []byte)([]byte,error)  {
+	block,err := aes.NewCipher(key)
+	if err != nil {
+		return nil, err
+	}
+	blockSize := block.BlockSize()
+	originalBytes = PKCS5Padding(originalBytes,blockSize)
+	blockMode := cipher.NewCBCEncrypter(block,key[:blockSize])
+	cipherBytes := make([]byte,len(originalBytes))
+	blockMode.CryptBlocks(cipherBytes,originalBytes)
+	return cipherBytes,nil
+}
+
+// AesDecrypt AES 解密,返回切片 string()直接转换
+func AesDecrypt(cipherBytes,key []byte) ([]byte,error) {
+	block,err := aes.NewCipher(key)
+	if err != nil {
+		return nil, err
+	}
+
+	blockSize := block.BlockSize()
+	blockMode := cipher.NewCBCDecrypter(block,key[:blockSize])
+	originalBytes := make([]byte,len(cipherBytes))
+	blockMode.CryptBlocks(originalBytes,cipherBytes)
+	originalBytes = PKCS5UnPadding(originalBytes)
+	return originalBytes,nil
+}
+
+
+// PKCS5Padding 尾部填充，使用PKCS5填充
+func PKCS5Padding(ciphertext []byte,blockSize int)[]byte{
+	padding := blockSize - len(ciphertext)%blockSize
+	padtext := bytes.Repeat([]byte{byte(padding)},padding)
+	return append(ciphertext,padtext...)
+}
+
+func PKCS5UnPadding(origData []byte)[]byte{
+	length := len(origData)
+	// 去掉最后一个字节 unpadding次
+	unpadding := int(origData[length-1])
+	return origData[:(length - unpadding)]
+}
+
+func main() {
+	var (
+		// 密钥 AES-128. key长度：16，24，32 bytes 对应AES-128,AES-192,AES-256
+		randKey = "U7ZLtRbwNEEjv5TS"
+		// 要加密的字符串
+		srcStr = "123456"
+	)
+	// 转换为[]byte切片
+	key := []byte(randKey)
+	str := []byte(srcStr)
+
+	fmt.Println("加密字符串：",srcStr)
+	fmt.Println("加密密钥：",randKey)
+
+	//////////////////////加密/////////////////////
+	res ,_ := AesEncrypt(str,key)
+	fmt.Printf("加密密文：%x\n",res)  // 55ef2e9ae2b975be
+
+	////////////////////解密/////////////////////
+	decStr,_ := AesDecrypt(res,key)
+	fmt.Printf("解密后字符串：%s",string(decStr))
+}
+```
+
+返回：
+
+```ini
+加密字符串:  123456
+加密密钥: U7ZLtRbwNEEjv5TS
+加密密文: b8a259cac4f79fcf1674124d37830066
+解密后字符串: 123456
+```
 
 
 
+# 非对称加密
+
+## RSA算法
+
+### 生成密钥文件
+
+```go
+package main
+
+import (
+	"crypto/rand"
+	"crypto/rsa"
+	"crypto/x509"
+	"encoding/pem"
+	"flag"
+	"log"
+	"os"
+)
+// GenRsaKey 生成RSA 公钥及私钥文件
+func GenRsaKey(bits int)error{
+	// 生成私钥文件
+	privateKey,err := rsa.GenerateKey(rand.Reader,bits)
+	if err != nil {
+		return err
+	}
+	derStream := x509.MarshalPKCS1PrivateKey(privateKey)
+	block := &pem.Block{
+		Type: "私钥",
+		Bytes: derStream,
+	}
+	file,err := os.Create("private.pem")
+	if err != nil {
+		return err
+	}
+	err = pem.Encode(file,block)
+	if err != nil {
+		return err
+	}
+	// 生成公钥文件
+	publicaKey := &privateKey.PublicKey
+	derPkix,err := x509.MarshalPKIXPublicKey(publicaKey)
+	if err != nil {
+		return err
+	}
+	block = &pem.Block{
+		Type: "公钥",
+		Bytes: derPkix,
+	}
+	file,err = os.Create("publica.pem")
+	if err != nil {
+		return err
+	}
+	err = pem.Encode(file,block)
+	if err != nil {
+		return err
+	}
+	return nil
+}
+
+func main() {
+	// go build ; 生成密钥文件.exe -b 2048
+	var bits int
+	flag.IntVar(&bits,"b",2048,"密钥长度，默认1024位")
+	if err := GenRsaKey(bits);err != nil{
+		log.Fatal("密钥文件生成失败！")
+	}
+	log.Println("密钥文件生成成功！")
+}
+/*
+执行成功当前目录下生成private.pem和publica.pem两个文件
+*/
+```
+
+生成文件：
+
+```go
+private.pem
+publica.pem
+```
 
 
 
+### 加密和解密
+
+```go
+package main
+
+import (
+	"crypto/rand"
+	"crypto/rsa"
+	"crypto/x509"
+	"encoding/base64"
+	"encoding/pem"
+	"errors"
+	"flag"
+	"fmt"
+	"io/ioutil"
+	"os"
+)
+
+// 要加密的字符串，命令行传参
+//var decryped string
+// 公钥和私钥
+var privateKey, publicKey []byte
+
+// 解析命令行参数
+func init() {
+	var err error
+	//flag.StringVar(&decryped,"d","","加密过的数据")
+	flag.Parse()
+	publicKey,err = ioutil.ReadFile("publica.pem")
+	if err != nil {
+		os.Exit(-1)
+	}
+	privateKey,err = ioutil.ReadFile("private.pem")
+	if err != nil {
+		os.Exit(-1)
+	}
+}
+
+// 机密字符串，返回Base64编码字符串
+func RsaEncryptString(origDate string) (string ,error) {
+	block,_ := pem.Decode(publicKey)
+	if block == nil{
+		return "",errors.New("public key error")
+	}
+	pubInterface,err := x509.ParsePKIXPublicKey(block.Bytes)
+	if err != nil {
+		return "", err
+	}
+	pub := pubInterface.(*rsa.PublicKey)
+	cipherArr,err := rsa.EncryptPKCS1v15(rand.Reader,pub,[]byte(origDate))
+	if err != nil {
+		return "",err
+	}else {
+		return base64.StdEncoding.EncodeToString(cipherArr),nil
+	}
+}
+
+// 解密经过Base64编码的字符串，返回实际密码
+func RsaDecryptString(cipherText string)(string,error){
+	block,_ := pem.Decode(privateKey)
+	if block == nil{
+		return "",errors.New("private key error !")
+	}
+	priv , err := x509.ParsePKCS1PrivateKey(block.Bytes)
+	if err != nil {
+		return "", err
+	}
+	cipherArr,_ := base64.StdEncoding.DecodeString(cipherText)
+	originalArr,err := rsa.DecryptPKCS1v15(rand.Reader,priv,cipherArr)
+	if err != nil {
+		return "",err
+	}
+	return string(originalArr),nil
+}
+
+func main() {
+	str := "asdf这是要加密的字符串fdsa"
+	fmt.Println("加密前字符串：",str)
+	data,_ := RsaEncryptString(str)
+	fmt.Println("加密后字符串：",data)
+	origData,_ := RsaDecryptString(data)
+	fmt.Println("解密后字符串：",origData)
+}
+```
+
+返回：
+
+```ini
+加密前字符串: asdf这是要加密的字符串fdsa
+加密后字符串: h6HxIpQwtx+4GXC1PFmU3RiShpXmI+WMwS5xv9oxVMqaFdXRxriKqQa1blXWQLKM6VrPfiUL0REfko+J5CQyePvOYI4pxjqzzwxxhsw8MDl80dRKsmE3iar5t7qrrddA3KjvzHHfYPbc4DMeQCZhiry0w0IeTUFSGjVCuJbWbUJDLeX9cZ0nEfllu8
+Hr77qVAg2U/HjFtDpc9wJmJEOGuEpEim8fpUmJumqNu44bNGDZlRdYdJJs3qMrcnZPtnBSH2rTSCQOZCH0JAWIgGplqspVANeUQ8S1RGT4rstGLrJ29YUZjjS2cdo6UgTAHoMZwItUfagoj1+dx+YToZ7GGw==
+解密后字符串: asdf这是要加密的字符串fdsa
+```
 
 
 
+# 椭圆曲线加密算法和椭圆曲线数字嵌名算法
+
+《go语言开发实战》 P304
 
 
 
+# 字符编码与解码
+
+## Base64
+
+```go
+package main
+
+import (
+	"encoding/base64"
+	"fmt"
+)
+
+// Base64EncodeString base64编码
+func Base64EncodeString(str string) string{
+	return base64.StdEncoding.EncodeToString([]byte(str))
+}
+
+// Base64DecodeString Base64解码
+func Base64DecodeString(str string)string{
+	res ,_ := base64.StdEncoding.DecodeString(str)
+	return string(res)
+}
+
+func main() {
+	str := "asdf这是要base64编码的字符串fdsa"
+	fmt.Println("编码前字符串: ",str)
+	encodedata := Base64EncodeString(str)
+	fmt.Println("编码后字符串: ",encodedata)
+	decodeData := Base64DecodeString(encodedata)
+	fmt.Println("解码后字符串: ",decodeData)
+}
+```
+
+返回结果：
+
+```ini
+编码前字符串:  asdf这是要base64编码的字符串fdsa
+编码后字符串:  YXNkZui/meaYr+imgWJhc2U2NOe8lueggeeahOWtl+espuS4smZkc2E=
+解码后字符串:  asdf这是要base64编码的字符串fdsa
+```
 
 
+
+## Base58
 
 
 
