--- a/笔记/并发.md
+++ b/笔记/并发.md
@@ -512,7 +512,14 @@ func main() {
 
 ## worker pool(goroutine池)
 
+https://strikefreedom.top/high-performance-implementation-of-goroutine-pool原理
+
 golang/ants  开源协程池，有待研究
+
+```
+github.com/panjf2000/ants
+github.com/xxjwxc/gowp/workpool
+```
 
  在工作中我们通常会使用可以指定启动的goroutine数量–`worker pool`模式，控制`goroutine`的数量，防止`goroutine`泄漏和暴涨。 
 
