--- a/笔记/接口.md
+++ b/笔记/接口.md
@@ -466,6 +466,31 @@ func main() {
 
 
 
+**截取一段ini配置文件解析源码示例**
+
+```go
+func parseDataSource(source interface{}) (dataSource, error) {
+	switch s := source.(type) {
+	case string:
+		return sourceFile{s}, nil
+	case []byte:
+		return &sourceData{s}, nil
+	case io.ReadCloser:
+		return &sourceReadCloser{s}, nil
+	case io.Reader:
+		return &sourceReadCloser{ioutil.NopCloser(s)}, nil
+	default:
+		return nil, fmt.Errorf("error parsing data source: unknown type %q", s)
+	}
+}
+```
+
+
+
+
+
+
+
 # 练习
 
  使用接口的方式实现一个既可以往终端写日志也可以往文件写日志的简易日志库。 
