--- a/笔记/并发.md
+++ b/笔记/并发.md
@@ -629,6 +629,94 @@ func main() {
 
 
 
+## ants线程池使用
+
+https://github.com/panjf2000/ants/blob/master/README_ZH.md
+
+```go
+package main
+
+import (
+	"fmt"
+	"sync"
+	"sync/atomic"
+	"time"
+
+	"github.com/panjf2000/ants/v2"
+)
+
+var sum int32
+
+func myFunc(i interface{}) {
+	n := i.(int32)
+	atomic.AddInt32(&sum, n)
+	fmt.Printf("run with %d\n", n)
+}
+
+func demoFunc() {
+	time.Sleep(10 * time.Millisecond)
+	fmt.Println("Hello World!")
+}
+
+func main() {
+	// https://strikefreedom.top/high-performance-implementation-of-goroutine-pool
+	// https://segmentfault.com/a/1190000015464889
+	// release是当关闭该Pool支持通知所有worker退出运行以防goroutine泄露
+	defer ants.Release()
+
+	// 这里模拟运行100000000 次任务
+	runTimes := 100000000
+
+	// 实例化自定义大小的线程池
+	p1, _ := ants.NewPool(5)
+
+	// 优雅阻塞等待goroutine完毕
+	var wg sync.WaitGroup
+
+	/* Pool是一个通用的协程池，支持不同类型的任务，亦即每一个任务绑定一个函数提交到池中，批量执行不同类型任务，是一种广义的协程池
+	 - 构建要执行任务的函数
+	type f func() error
+	func (p *Pool) Submit(task f) error
+	*/
+	syncCalculateSum := func() {
+		myFunc(1)
+		wg.Done()
+	}
+	// 这里是模拟触发多个任务，关注submit即可
+	for i := 0; i < runTimes; i++ {
+		wg.Add(1)
+		// 提交任务到pool
+		_ = p1.Submit(syncCalculateSum)
+		//_ = ants.Submit(syncCalculateSum)
+	}
+	wg.Wait()
+	fmt.Printf("running goroutines: %d\n", ants.Running())
+	fmt.Printf("finish all tasks.\n")
+
+	/* PoolWithFunc struct—一个执行批量同类任务的协程池，PoolWithFunc相较于Pool，因为一个池只绑定一个任务函数，
+	    省去了每一次task都需要传送一个任务函数的代价，因此其性能优势比起Pool更明显。
+	func NewPoolWithFunc(size int, pf func(interface{}), options ...Option) (*PoolWithFunc, error)
+	     - size  capacity是该Pool的容量
+	*/
+	p, _ := ants.NewPoolWithFunc(10, func(i interface{}) {
+		myFunc(i)
+		wg.Done()
+	})
+	defer p.Release()
+	// Submit tasks one by one.
+	for i := 0; i < runTimes; i++ {
+		wg.Add(1)
+		_ = p.Invoke(int32(i))
+	}
+	wg.Wait()
+	fmt.Printf("running goroutines: %d\n", p.Running())
+	fmt.Printf("finish all tasks, result is %d\n", sum)
+}
+
+```
+
+
+
 ## select 多路复用
 
 在某些场景下我们需要同时从多个通道接收数据。通道在接收数据时，如果没有数据可以接收将会发生阻塞。你也许会写出如下代码使用遍历的方式来实现： 
