--- a/prometheus笔记/笔记.md
+++ b/prometheus笔记/笔记.md
@@ -189,6 +189,136 @@ P65
 
 blackbox_exporter
 
+以下直接在prometheus server监控，未使用exporter，但配置文件内容相同
+
+```yaml
+wget https://github.com/prometheus/prometheus/releases/download/v2.4.2/prometheus-2.4.2.linux-amd64.tar.gz
+tar -xzf prometheus-*.tar.gz
+cd prometheus-*
+cat <<'EOF' > prometheus.yml
+global:
+ scrape_interval: 10s
+scrape_configs:
+ - job_name: blackbox
+   metrics_path: /probe
+   params:
+     module: [http_2xx]
+   static_configs:
+    - targets:
+       - https://www.robustperception.io/
+       - http://www.cnblogs.com
+   relabel_configs:
+    - source_labels: [__address__]  # 将__address__写入__param_target标签来创建参数
+      target_label: __param_target
+    - source_labels: [__param_target] # relabel将获取__param_target的值，并覆盖写到instance标签
+      target_label: instance
+    - target_label: __address__ # 重新标记__address__标签。 BlockBox Exporter实例的访问地址，示例向127.0.0.1:9115/probe发送请求获取实例的metrics信息
+      replacement: 127.0.0.1:9115 # The blackbox exporter.
+EOF
+./prometheus
+```
+
+- 第一个relabel通过将__address__标签(当前目标地址)写入__param_target标签来创建一个参数。
+- 第二个relabel将__param_target标签写为实例标签。
+- 最后一个使用我们的主机名(和端口)重新标记__address__标签。
+
+<font color=FF0000>将源address地址写为查询target参数，将param_target写道instance，替换target_label为exporter所在地址</font>
+
+通过curl请求查询
+
+```shell
+curl 127.0.0.1:9115/probe?module=http_2xx&target=http://www.cnblogs.com/
+```
+
+![1615531743801](笔记.assets/1615531743801.png)
+
+![1615531785488](笔记.assets/1615531785488.png)
+
+
+
+## 服务发现
+
+### 基于文件的服务发现
+
+支持`JSON`和`yml`
+
+* json
+
+  ```shell
+  # vim prometheus.yml
+  scrape_configs: 
+    - job_name: 'www_xxx'
+      file_sd_configs:
+        - files:
+          - targets/www.xxx.com/*.json
+          refresh_interval: 60m
+  
+  
+  # cd prometheus
+  # mkdir targets/www.xxx.com/
+  # vim www_xxx_node.json
+  [
+      {
+          "targets":[
+              "10.0.0.11",
+              "10.0.0.12"
+          ],
+          "labels":{
+              "env":"www.xxx.com",
+              "release":"prod"
+          }
+      }
+  ]
+  ```
+
+  其中：file_sd_configs 指定prometheus基于文件的服务发现配置使用选项
+
+  ​           files：自定义的和prometheus程序同级的targets目录
+
+  ​           refresh_interval：60m 自定义刷新间隔时间味60秒
+
+  首次添加该类服务发现需要重启或热加载
+
+* yaml
+
+  1.  修改vim prometheus.yml
+
+     ```shell
+     scrape_configs: 
+       - job_name: 'www_xxx'
+         file_sd_configs:
+           - files:
+             - targets/www.xxx.com/*.json
+           - files:
+             - targets/www.xxx.com/*.yml
+             refresh_interval: 60m
+     ```
+
+  2. 添加yaml格式服务发现文件
+
+     ```shell
+     # cd prometheus
+     # mkdir targets/www.xxx.com/
+     # vim www_xxx_node.yml
+     ```
+
+     ```shell
+     - targets:
+         - 10.0.0.11
+         - 10.0.0.12
+       labels:
+         env: www.xxx.com
+         release: prod
+     ```
+
+     
+
+### 基于consul的服务发现
+
+
+
+
+
 
 
 ## 配置文件分离
@@ -196,6 +326,10 @@ blackbox_exporter
 P70
 
 使用`file_sd_configs` 创建json文件类型
+
+
+
+
 
 
 
