--- a/prometheus笔记/笔记.md
+++ b/prometheus笔记/笔记.md
@@ -140,6 +140,10 @@ promtool -h
 
 
 
+## 标签
+
+https://prometheus.io/docs/prometheus/latest/configuration/configuration/#relabel_config
+
 ## http api
 
 https://prometheus.io/docs/prometheus/latest/querying/api/
@@ -223,6 +227,10 @@ EOF
 - 最后一个使用我们的主机名(和端口)重新标记__address__标签。
 
 <font color=FF0000>将源address地址写为查询target参数，将param_target写道instance，替换target_label为exporter所在地址</font>
+
+每次增加 Target 时会自动增加一个 instance 标签，而 instance 标签的内容刚好对应 Target 实例的 __address__ 值，这是因为实际上 Prometheus 内部做了一次标签重写处理，默认 __address__ 标签设置为 <host>:<port> 地址，经过标签重写后，默认会自动将该值设置为 instance 标签，所以我们能够在页面看到该标签。
+
+![1615776514872](笔记.assets/1615776514872.png)
 
 通过curl请求查询
 
@@ -315,9 +323,358 @@ curl 127.0.0.1:9115/probe?module=http_2xx&target=http://www.cnblogs.com/
 
 ### 基于consul的服务发现
 
+p78
+
+https://blog.csdn.net/aixiaoyang168/article/details/103022342
+
+https://www.cnblogs.com/xiaohanlin/p/8016803.html
+
+[ 官网consul包](https://www.consul.io/downloads.html )
+
+[docker集群参考](https://www.cnblogs.com/xiaohanlin/p/8016803.html)
+
+[api文档](https://www.consul.io/api/agent/service)
+
+![1615868825102](笔记.assets/1615868825102.png)
+
+第一次接触consul，我就想为什么服务不直接注册到consul server上，而是中间加个consul client。看了官方文档，说说我的理解。
+consul自带服务检测机制(script，HTTP，TCP，TTL，Docker，gRPC) 见:consul官网-Docs-agent-Check Definitions。以检测HTTP健康情况来说，如果一个服务注册到consul上(服务必须对外提供/health rest接口)，consul agent(consul server和consul client都是agent)定期调用该接口。如果返回200OK则认为该服务PASS。所以如果上千个服务直接注册到consul server上，那server端检测压力可想而知。
+欢迎大家讨论。
 
 
 
+#### 开发者模式启动测试
+
+```shell
+./consul agent -dev -client 0.0.0.0
+```
+
+查看下集群的状态
+
+```shell
+./consul members
+```
+
+列出注册服务
+
+```shell
+# 列出所有服务
+GET 127.0.0.1:8500/v1/agent/services
+# 列出node_exporter
+GET 127.0.0.1:8500/v1/agent/service/node_exporter
+```
+
+
+
+#### 配置文件注册
+
+<font color="FF0000">标签分类向下看</font>
+
+* consul配置
+
+  ```shell
+  mkdir consul.d
+  cd consul.d
+  # 指定配置启动
+  ./consul agent -dev -client 0.0.0.0 --config-dir=./consul.d
+  ```
+
+  编辑注册配置
+
+  ```json
+  cat node_exporter.json
+  {
+      "service": {
+          "id": "node_exporter_171",
+          "name": "node_exporter_171",
+          "tags": [
+              "dev_node1"
+          ],
+          "address": "172.16.1.171",
+          "port": 32774
+      }
+  }
+  ```
+
+  其中：
+     **`id `** 服务ID，可选。若提供，则将其设置为`name`一致
+      **`name `**服务名称，必选。要求每个节点上的u偶有服务都有唯一`name`作为`id`
+      **`tags `**服务标签，自定义可选项，用于区分主节点活辅助节点
+      **`address`**地址字段，用于指定特定于服务的`ip`地址。默认情况下使用`agent`的`ip`地址，因而不需要提供这个地址。可以理解为服务注册到`consul`使用的`ip`，服务发现是发现的此ip地址
+      **`port`**服务注册到consul使用的端口，也是发现`address`对应的端口
+
+  **重载服务**
+
+* prometheus集成
+
+  ```yaml
+  scrape_configs:
+    - job_name: 'consul_sd_node_exporter'
+      scheme: http
+      consul_sd_configs:
+      - server: '172.16.1.171:8500'
+        services:
+        - node_exporter_171 # 这里写空或不写，会加载该consul所有的srevice
+  ```
+
+  ![1615887168175](笔记.assets/1615887168175.png)
+
+  ![1615887240550](笔记.assets/1615887240550.png)
+
+  写空加载所有service，down是因为没有机器，只做测试。以下是当前所有注册service
+
+  ```json
+  curl 127.0.0.1:8500/v1/agent/services
+  {
+      "node-exporter-172.16.1.171": {
+          "ID": "node-exporter-172.16.1.171",
+          "Service": "node-exporter-172.16.1.171",
+          "Tags": [
+              "test_discovery"
+          ],
+          "Meta": {},
+          "Port": 32774,
+          "Address": "172.16.1.171",
+          "TaggedAddresses": {
+              "lan_ipv4": {
+                  "Address": "172.16.1.171",
+                  "Port": 32774
+              },
+              "wan_ipv4": {
+                  "Address": "172.16.1.171",
+                  "Port": 32774
+              }
+          },
+          "Weights": {
+              "Passing": 1,
+              "Warning": 1
+          },
+          "EnableTagOverride": false,
+          "Datacenter": "dc1"
+      },
+      "node-exporter-172.16.1.172": {
+          "ID": "node-exporter-172.16.1.172",
+          "Service": "node-exporter-172.16.1.172",
+          "Tags": [
+              "test_discovery"
+          ],
+          "Meta": {},
+          "Port": 9100,
+          "Address": "172.16.1.172",
+          "TaggedAddresses": {
+              "lan_ipv4": {
+                  "Address": "172.16.1.172",
+                  "Port": 9100
+              },
+              "wan_ipv4": {
+                  "Address": "172.16.1.172",
+                  "Port": 9100
+              }
+          },
+          "Weights": {
+              "Passing": 1,
+              "Warning": 1
+          },
+          "EnableTagOverride": false,
+          "Datacenter": "dc1"
+      },
+      "node_exporter_171": {
+          "ID": "node_exporter_171",
+          "Service": "node_exporter_171",
+          "Tags": [
+              "dev_node1"
+          ],
+          "Meta": {},
+          "Port": 32774,
+          "Address": "172.16.1.171",
+          "TaggedAddresses": {
+              "lan_ipv4": {
+                  "Address": "172.16.1.171",
+                  "Port": 32774
+              },
+              "wan_ipv4": {
+                  "Address": "172.16.1.171",
+                  "Port": 32774
+              }
+          },
+          "Weights": {
+              "Passing": 1,
+              "Warning": 1
+          },
+          "EnableTagOverride": false,
+          "Datacenter": "dc1"
+      }
+  }
+  ```
+
+  
+
+#### http api注册
+
+https://www.consul.io/docs/discovery/services
+
+* `consul`配置
+
+  ```shell
+  curl -XPUT http://172.16.1.171:8500/v1/agent/service/register -d '
+  {
+      "name": "node-exporter-172.16.1.172", 
+      "address": "172.16.1.172", 
+      "port": 9100, 
+      "tags": [
+          "test_discovery"
+      ], 
+      "checks": [
+          {
+              "http": "http://172.16.1.172:32774/metrics", 
+              "interval": "5s"
+          }
+      ]
+  }'
+  ```
+
+  
+
+* 与`prometheus`集成
+
+  ```yaml
+  scrape_configs:
+    - job_name: 'consul_sd_node_exporter'
+      scheme: http
+      consul_sd_configs:
+      - server: '172.16.1.171:8500'
+        services:
+        - node_exporter_171
+  ```
+
+  consul_sd_configs: 指定`Prometheus`是基于`Consul`的自动服务发现所使用的选项
+
+  server：指定Consul服务地址
+
+  service：服务名称列表（不写默认获取Consul上注册的所有服务）
+
+
+
+#### 服务下线
+
+```shell
+curl --request PUT http://127.0.0.1:8500/v1/agent/service/deregister/node_exporter
+```
+
+
+
+#### relabel_configs 实现自定义标签及分类
+
+[参考](https://blog.csdn.net/aixiaoyang168/article/details/103022342)
+
+​        先来普及一下 relabel_configs 的功能， Prometheus 允许用户在采集任务设置中，通过 relabel_configs 来添加自定义的 Relabeling 的额过程，来对标签进行指定规则的重写。 Prometheus 加载 Targets 后，这些 Targets 会自动包含一些默认的标签，Target 以 `__` 作为前置的标签是在系统内部使用的，这些标签不会被写入到样本数据中。眼尖的会发现，每次增加 Target 时会自动增加一个 instance 标签，而 instance 标签的内容刚好对应 Target 实例的 __address__ 值，这是因为实际上 Prometheus 内部做了一次标签重写处理，默认 __address__ 标签设置为 <host>:<port> 地址，经过标签重写后，默认会自动将该值设置为 instance 标签，所以我们能够在页面看到该标签。
+![1615889036341](笔记.assets/1615889036341.png)
+
+详细 relabel_configs 配置及说明可以参考 relabel_config 官网说明，这里我简单列举一下里面每个 relabel_action 的作用，方便下边演示。
+
+* `replace`: 根据 regex 的配置匹配 source_labels 标签的值（注意：多个 source_label 的值会按照 separator 进行拼接），并且将匹配到的值写入到 target_label 当中，如果有多个匹配组，则可以使用 ${1}, ${2} 确定写入的内容。如果没匹配到任何内容则不对 target_label 进行重新， 默认为 replace。
+
+* `keep`: 丢弃 source_labels 的值中没有匹配到 regex 正则表达式内容的 Target 实例
+* `drop`: 丢弃 source_labels 的值中匹配到 regex 正则表达式内容的 Target 实例
+* `hashmod`: 将 target_label 设置为关联的 source_label 的哈希模块
+* `labelmap`: 根据 regex 去匹配 Target 实例所有标签的名称（注意是名称），并且将捕获到的内容作为为新的标签名称，regex 匹配到标签的的值作为新标签的值
+* `labeldrop`: 对 Target 标签进行过滤，会移除匹配过滤条件的所有标签
+* `labelkeep`: 对 Target 标签进行过滤，会移除不匹配过滤条件的所有标签
+
+
+
+配置 relabel_configs 来实现标签过滤，只加载符合规则的服务。以上边为例，可以通过过滤`__meta_consul_tags `标签为 test 的服务，relabel_config 向 Consul 注册服务的时候，只加载匹配 regex 表达式的标签的服务到自己的配置文件。修改 prometheus.yml 配置如下：
+
+```yml
+scrape_configs:                 
+  - job_name: 'consul_sd_node_exporter1'
+    scheme: http
+    consul_sd_configs:                  
+    - server: '172.16.1.171:8500'
+      services:       
+    relabel_configs:             
+    - source_labels: [__meta_consul_tags]
+      regex: .*test.*
+      action: keep                       
+                     
+  - job_name: 'consul_sd_node_exporter2'
+    scheme: http
+    consul_sd_configs:                  
+    - server: '172.16.1.171:8500'
+      services:       
+    relabel_configs:             
+    - source_labels: [__meta_consul_tags]
+      regex: .*dev_node1.*
+      action: keep
+```
+
+语法检查
+
+```shell
+promtool check config /etc/prometheus/prometheus.yml
+```
+
+结果
+
+<img src="笔记.assets/1615890219742.png" alt="1615890219742" style="zoom:80%;" />
+
+这里的 relabel_configs 配置作用为丢弃源标签中 __meta_consul_tags 不包含 test 标签的服务，__meta_consul_tags 对应到 Consul 服务中的值为 "tags": ["test_discovry"]，默认 consul 服务是不带该标签的，从而实现过滤。重启 Prometheus 可以看到标签已经分类成功
+
+##### 添加自定义标签
+
+将系统默认标签或者用户自定义标签转换成可视化标签，方便查看及后续 Alertmanager 进行告警规则匹配分组。不过要实现给服务添加自定义标签，我们还得做一下修改，就是在注册服务时，将自定义标签信息添加到 Meta Data 数据中，具体可以参考 [这里](Consul Service - Agent HTTP API) 官网说明，下边来演示一下如何操作。
+
+```shell
+$ vim consul-0.json
+{
+  "ID": "node-exporter",
+  "Name": "node-exporter-172.30.12.167",
+  "Tags": [
+    "test"
+  ],
+  "Address": "172.30.12.167",
+  "Port": 9100,
+  "Meta": {
+    "app": "spring-boot",
+    "team": "appgroup",
+    "project": "bigdata"
+  },
+  "EnableTagOverride": false,
+  "Check": {
+    "HTTP": "http://172.30.12.167:9100/metrics",
+    "Interval": "10s"
+  },
+  "Weights": {
+    "Passing": 10,
+    "Warning": 1
+  }
+}
+```
+
+ 说明一下：该 Json 文件为要注册的服务信息，同时往 Meta 信息中添加了 `app=spring-boot`，`team=appgroup`，`project=bigdata` 三组标签，目的就是为了方便告警分组使用。执行如下命令进行注册： 
+
+```yaml
+...
+- job_name: 'consul-prometheus'
+  consul_sd_configs:
+    - server: '172.30.12.167:8500'
+      services: []  
+  relabel_configs:
+    - source_labels: [__meta_consul_tags]
+      regex: .*test.*
+      action: keep
+    - regex: __meta_consul_service_metadata_(.+)
+      action: labelmap
+
+```
+
+解释一下，增加的配置作用为匹配 __meta_consul_service_metadata_ 开头的标签，将捕获到的内容作为新的标签名称，匹配到标签的的值作为新标签的值，而我们刚添加的三个自定义标签，系统会自动添加 __meta_consul_service_metadata_app=spring-boot、__meta_consul_service_metadata_team=appgroup、__meta_consul_service_metadata_project=bigdata 三个标签，经过 relabel 后，Prometheus 将会新增 app=spring-boot、team=appgroup、project=bigdata 三个标签。重启 Prometheus 服务，可以看到新增了对应了三个自定义标签。
+
+<img src="笔记.assets/1615890757864.png" alt="1615890757864" style="zoom:80%;" />
+
+### 基于dns
+
+`dns_sd_configs`
 
 
 
