--- a/prometheus笔记/笔记.md
+++ b/prometheus笔记/笔记.md
@@ -179,6 +179,20 @@ P38
 node_exporter -h
 ```
 
+* Prometheus server
+
+  ```yaml
+  scrape_configs:
+    - job_name: 'k8s_node_prod'
+      static_configs:
+      - targets:
+        - 172.10.10.197:9100
+        - 172.10.10.196:9100
+        - 172.10.10.195:9100
+  ```
+
+  
+
 #### systemd服务配置
 
 P43
@@ -201,7 +215,7 @@ tar -xzf prometheus-*.tar.gz
 cd prometheus-*
 cat <<'EOF' > prometheus.yml
 global:
- scrape_interval: 10s
+ scrape_interval: 10s    # 收集监控目标信息的周期并且配置对应告警规则
 scrape_configs:
  - job_name: blackbox
    metrics_path: /probe
