--- a/笔记/网络编程.md
+++ b/笔记/网络编程.md
@@ -676,7 +676,7 @@ func main() {
 }
 ```
 
-### 自定义Client
+### 自定义Client    http.Do
 
  要管理HTTP客户端的头域、重定向策略和其他设置，创建一个Client： 
 
@@ -692,6 +692,27 @@ req.Header.Add("If-None-Match", `W/"wyzzy"`)
 resp, err := client.Do(req)
 // ...
 ```
+
+```go
+func httpDo() {
+    client := &http.Client{}
+    req, err := http.NewRequest("POST", "http://www.01happy.com/demo/accept.php", strings.NewReader("name=cjb"))
+    if err != nil {
+        // handle error
+    }
+    req.Header.Set("Content-Type", "application/x-www-form-urlencoded")
+    req.Header.Set("Cookie", "name=anny")
+    resp, err := client.Do(req)
+    defer resp.Body.Close()
+    body, err := ioutil.ReadAll(resp.Body)
+    if err != nil {
+        // handle error
+    }
+    fmt.Println(string(body))
+}
+```
+
+
 
 ### 自定义Transport
 
