--- a/笔记/文件操作.md
+++ b/笔记/文件操作.md
@@ -103,6 +103,209 @@ func main() {
 }
 ```
 
+# 文件信息
+
+```golang
+import (
+	"fmt"
+	"os"
+	"path/filepath"
+	"runtime"
+)
+
+func main() {
+// 运行时相关
+	fmt.Println(runtime.Caller(0))    // 1896843 C:/Users/Administrator/go/src/awesomeProject/mtest/main.go 11 true
+	// 执行文件
+	fmt.Println(filepath.Base(os.Args[0])) //main.exe
+	// 文件路径
+	fmt.Println(filepath.Abs("./"))  //C:\Users\Administrator\go\src\awesomeProject\mtest <nil>
+	// 文件路径
+	fmt.Println(os.Getwd())               // C:\Users\Administrator\go\src\awesomeProject\mtest <nil>
+	// 
+	fmt.Println(filepath.Dir(os.Args[0])) //C:\Users\ADMINI~1\AppData\Local\Temp\go-build710883614\b001\exe
+	fmt.Println(os.Executable())          //C:\Users\ADMINI~1\AppData\Local\Temp\go-build710883614\b001\exe\main.exe <nil>
+}
+```
+
+## 链接文件相关
+
+`Readlink`返回链接文件名
+
+```
+data,_:= os.Readlink(fileName)
+fmt.Println("readLink",data)
+```
+
+`Lstat`返回链接文件信息
+
+```
+fileInfo,err := os.Lstat(fileName)
+```
+
+### 显示所有文件夹、子文件夹、文件、子文件
+
+使用包：
+path/filepath
+os
+
+```go
+package main
+
+import (
+    "fmt"
+    "os"
+    "path/filepath"
+)
+
+func visit(path string, f os.FileInfo, err error) error {
+    fmt.Printf("Visited: %s\n", path)
+    return nil
+}
+
+func main() {
+    root := `d:\go_workspace\`
+    err := filepath.Walk(root, visit)
+    fmt.Printf("filepath.Walk() returned %v\n", err)
+}
+```
+
+### 获取文件夹中所有文件以及文件的大小
+
+使用包：
+path/filepath
+os
+
+```go
+package main
+
+import (
+    "fmt"
+    "os"
+    "path/filepath"
+)
+
+func main() {
+    dirname := "." + string(filepath.Separator)
+    d, err := os.Open(dirname)
+    if err != nil {
+        fmt.Println(err)
+        os.Exit(1)
+    }
+    defer d.Close()
+    fi, err := d.Readdir(-1)
+    if err != nil {
+        fmt.Println(err)
+        os.Exit(1)
+    }
+    for _, fi := range fi {
+        if fi.Mode().IsRegular() {
+            fmt.Println(fi.Name(), fi.Size(), "bytes")
+        }
+    }
+}
+```
+
+### 重命名文件
+
+```go
+package main
+
+import (
+    "log"
+    "os"
+)
+
+func main() {
+    originalPath := "./test.txt"
+    newPath := "test_new.txt"
+    err := os.Rename(originalPath, newPath)
+    if err != nil {
+        log.Fatal(err)
+    }
+}
+```
+
+### 重命名文件夹
+
+```go
+package main
+
+import (
+    "log"
+    "os"
+)
+
+func main() {
+    originalPath := "test"
+    newPath := "test_new"
+    err := os.Rename(originalPath, newPath)
+    if err != nil {
+        log.Fatal(err)
+    }
+}
+```
+
+### 判断某个文件是否存在
+
+```go
+package main
+
+import (
+    "fmt"
+    "os"
+)
+
+func main() {
+    originalPath := "test.txt"
+    result := Exists(originalPath)
+    fmt.Println(result)
+}
+
+func Exists(name string) bool {
+    if _, err := os.Stat(name); err != nil {
+        if os.IsNotExist(err) {
+            return false
+        }
+    }
+    return true
+}
+```
+
+### 判断某个文件的读写权限
+
+```go
+package main
+
+import (
+    "log"
+    "os"
+)
+
+func main() {
+
+    //Write permission
+    file, err := os.OpenFile("./test.txt", os.O_WRONLY, 0666)
+    if err != nil {
+        if os.IsPermission(err) {
+            log.Println("Error: Write permission denied.")
+        }
+    }
+    file.Close()
+
+    //Read permission
+    file, err = os.OpenFile("./test.txt", os.O_RDONLY, 0666)
+    if err != nil {
+        if os.IsPermission(err) {
+            log.Println("Error: Read permission denied.")
+        }
+    }
+    file.Close()
+}
+```
+
+
+
 ## 创建目录
 
 ```
@@ -410,7 +613,7 @@ func OpenFile(name string, flag int, perm FileMode) (*File, error) {
 
 ```go
 str := "xxxxx"
-file.Write([]byte(str))   // 写入字节切片数据
+file.Write([]byte(str))   // 写入字节切片数据,返回写入字节数
 file.WriteString("xxxx")  // 直接写入字符串数据
 ```
 
